fixed gap in aboutpage

--- a/app/styles/AboutPage.css
+++ b/app/styles/AboutPage.css
@@ -57,6 +57,7 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  gap: 2rem;
 }
 
 .gallery-title {
